# dir-catalog

./: README.md  pyproject.toml
src/dir_catalog/: console.py
tests/: test_console.py
